# riscv-os-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  console.rs  debug.rs  helper.rs  linker.ld  main.rs  page_table.rs  page_table_entry.rs  percpu.rs  plic.rs  process.rs  serial_log.rs  start.s  syscall.rs  trap.rs
kernel/src/arch/: mod.rs
kernel/src/arch/riscv/: boot.rs  context.rs  mod.rs  plic.rs  trap.rs
kernel/src/arch/riscv/mmu/: mod.rs
kernel/src/arch/riscv/mmu/sv39/: mod.rs  page_table.rs  page_table_entry.rs  physical_address.rs  virtual_address.rs
kernel/src/arch/riscv/trap/: mod.rs  trap.rs  trap_frame.rs  trap_handler.rs
kernel/src/driver/: mod.rs  uart.rs
kernel/src/driver/virtio/: block.rs  mmio.rs  mod.rs  virtqueue.rs
kernel/src/memory/: mod.rs  page_table.rs
kernel/src/memory/sv39/: mod.rs  page_table_entry.rs  physical_address.rs  virtual_address.rs
kernel/src/mm/: allocator.rs  frame_allocator.rs  kernel_allocator.rs  kvm.rs  mappings.rs  mod.rs
kernel/src/mm/sv39/: page_table.rs  page_table_entry.rs  physical_address.rs  virtual_address.rs
kernel/src/sched/: mod.rs  sched.rs
kernel/src/task/: address_space.rs  id.rs  mod.rs  process.rs  process_table.rs  schedule.rs  state.rs  table.rs  task.rs
kernel/src/userspace/: mod.rs  shell.rs  syscalls.rs
kernel/src/vfs/: directory.rs  file.rs  inode.rs  mod.rs
kmalloc/: Cargo.toml
kmalloc/src/: lib.rs  linked_list_allocator.rs
ksync/: Cargo.toml
ksync/src/: lib.rs  rw_lock.rs  spin_lock.rs
riscv/: Cargo.toml
riscv/src/: lib.rs  sbi.rs
vfs/: Cargo.toml
vfs/src/: lib.rs
vsfs/: Cargo.toml
vsfs/src/: lib.rs
xv6-kernel/: Cargo.toml  start.S
(+16 files in other folders)
