[workspace]
members = ["kernel", "riscv", "ksync", "kmalloc", "vsfs"]
resolver = "3"

[workspace.package]
license = "GPL"
edition = "2024"

[workspace.dependencies]
riscv = { path = "./riscv", default-features = false }
ksync = { path = "./ksync", default-features = false }
kmalloc = { path = "./kmalloc", default-features = false }
bitflags = "2.11.0"
