[package]
name = "kernel"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
bitflags = "2.11.0"
riscv = { workspace = true }
ksync = { workspace = true }
heapless = "0.9.2"
log = "0.4.29"

[build-dependencies]
cc = "1"

[features]
default = [ "riscv-sbi" ]
riscv-sbi = [ "sv39" ]
sv39 = []
multi-core = []
