[package]
name = "kernel"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
bitflags = "2.11.0"
riscv = { workspace = true }
ksync = { workspace = true }
log = "0.4.29"
kmalloc = { workspace = true }

[build-dependencies]
cc = "1"

[features]
default = [ "riscv-sbi" ]
riscv-sbi = [ "sv39" ]
sv39 = []
multi-core = []
